# redisc

./: .gitignore  README.rst  build.bat  pyproject.toml  setup.py
benchmark/: bench_credis.py  bench_redis_py.py
src/redisc/: __init__.py  base.pyx  geventpool.pyx  pool.pyx
test/: pool_test.py  simple_test.py
