[project]
name = "redisc"
version = "0.0.5"
description = "high performance redis client with cython for realtime applications"
readme = "README.rst"
requires-python = ">=3.7"

authors = [
    { name="kameron", email="khr675@gmail.com" },
]

classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Database"
]

dependencies = [
    "hiredis",
    "gevent",
]

[project.optional-dependencies]
test = [
    "pytest",
]

benchmark = [
    "redis",
]

deploy = [
    "cython",
    "setuptools",
    "wheel",
    "twine",
]

[project.license]
"file" = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/Kameroni33/credis"
"Bug Tracker" = "https://github.com/Kameroni33/credis/issues"

[build-system]
requires = ["cython>=3.0.0", "setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
