[project]
name = "redisc"
version = "0.0.6"
description = "high performance redis client with cython for realtime applications"
readme = "README.rst"
requires-python = ">=3.7"

authors = [
    { name="kameron", email="khr675@gmail.com" },
]

classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Database"
]

dependencies = [
    "hiredis>=2.2.3",
    "gevent>=23.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

benchmark = [
    "redis>=4.6.0",
]

deploy = [
    "cython>=3.0.0",
    "setuptools>=33.1.1",
    "wheel>=0.41.0",
    "twine>=4.0.2",
]

[project.license]
"file" = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/Kameroni33/credis"
"Bug Tracker" = "https://github.com/Kameroni33/credis/issues"

[build-system]
requires = ["cython>=3.0.0", "setuptools>=33.1.1"]
build-backend = "setuptools.build_meta"
